feat: add channel search endpoint